# Vulkan_Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/models/: scene.gltf
assets/models/damagedHelmet/: DamagedHelmet.gltf
assets/skybox/: pene.ktx
assets/skybox/Apartment/IrradianceMap/: Irradiance.hdr
shaders/: BRDF.comp  CMakeLists.txt  deferred_off.frag  deferred_off.vert  deferred_on.frag  light.frag  light.vert  normal.frag  normal.vert  preIrradiance.frag  preIrradiance.vert  prefilterEnvMap.frag  prefilterEnvMap.vert  scene.frag  scene.vert  shLighting.frag  shLighting.vert  shader.frag  shader.vert  shader_frag.frag  shader_vert.vert  shadowMap.vert  skybox.frag  skybox.vert
shaders/old/: phongShading.frag
src/VulkanRenderer/: Guid_Allocator.h  HelloTriangleApp.cpp  HelloTriangleApp.h  Helper.h  InputManager.cpp  InputManager.h  RenderDataTypes.h  RenderResource.cpp  RenderResource.h  Renderer.cpp  Renderer.h  main.cpp
src/VulkanRenderer/Buffer/: BufferManager.cpp  BufferManager.h  BufferUtils.cpp  BufferUtils.h
src/VulkanRenderer/BufferManager/: BufferManager.cpp  BufferManager.h  BufferUtils.cpp
src/VulkanRenderer/Buffers/: BufferManager.cpp  BufferManager.h  BufferUtils.cpp  BufferUtils.h
src/VulkanRenderer/Camera/: Camera.cpp  Camera.h
src/VulkanRenderer/Camera/Types/: Arcball.cpp  Arcball.h
src/VulkanRenderer/Command/: CommandManager.cpp  CommandManager.h  CommandPool.cpp  CommandPool.h
src/VulkanRenderer/Commands/: CommandManager.cpp  CommandManager.h  CommandPool.cpp  CommandPool.h  CommandUtils.cpp  CommandUtils.h
src/VulkanRenderer/Computation/: Computation.cpp  Computation.h
src/VulkanRenderer/DepthBuffer/: DepthBuffer.cpp  DepthUtils.cpp  DepthUtils.h
src/VulkanRenderer/Descriptor/: DescriptorManager.cpp  DescriptorManager.h  DescriptorPool.cpp  DescriptorSet.cpp  DescriptorSet.h  DescriptorSetLayoutManager.cpp  DescriptorSetLayoutManager.h  DescriptorSets.cpp  DescriptorSets.h  DescriptorTypes.h
src/VulkanRenderer/Descriptor/Types/: DescriptorTypes.h  DescriptorTypesUtils.cpp
src/VulkanRenderer/Descriptors/: DescriptorInfo.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSetLayoutUtils.cpp  DescriptorSetLayoutUtils.h  DescriptorSets.cpp  DescriptorSets.h  DescriptorTypeUtils.cpp  DescriptorTypeUtils.h  DescriptorTypes.h  UniformBufferObject.h
src/VulkanRenderer/Descriptors/DescriptorTypes/: DescriptorTypes.h  DescriptorTypesUtils.cpp  DescriptorTypesUtils.h  Sampler.cpp  Sampler.h  UBO.cpp  UBO.h
src/VulkanRenderer/Descriptors/Types/: DescriptorTypes.h  DescriptorTypesUtils.cpp  DescriptorTypesUtils.h
src/VulkanRenderer/Device/: Device.cpp  Device.h
src/VulkanRenderer/Entity/: Entity.h
src/VulkanRenderer/Extensions/: ExtensionsUtils.cpp
src/VulkanRenderer/Features/: CascadedShadowMap.cpp  CascadedShadowMap.h  DepthBuffer.cpp  DepthBuffer.h  FeaturesUtils.cpp  FeaturesUtils.h  LightSphere.cpp  LightSphere.h  MSAA.cpp  MSAA.h  PreIrradiance.cpp  PreIrradiance.h  PrefilteredEnvMap.cpp  PrefilteredEnvMap.h  ShadowMap.cpp  ShadowMap.h  Skybox.cpp  Skybox.h
src/VulkanRenderer/Framebuffer/: FramebufferManager.cpp  FramebufferManager.h  FramebufferUtils.cpp  FramebufferUtils.h
src/VulkanRenderer/GUI/: GUI.cpp  GUI.h
src/VulkanRenderer/GraphicsPipeline/: GraphicsPipeline.cpp  GraphicsPipeline.h  GraphicsPipelineManager.cpp  GraphicsPipelineManager.h  RenderTarget.cpp  RenderTarget.h  RenderTargetUtils.cpp  RenderTargetUtils.h
src/VulkanRenderer/GraphicsPipeline/DepthBuffer/: DepthBuffer.cpp  DepthBuffer.h  DepthUtils.cpp  DepthUtils.h
src/VulkanRenderer/Image/: Image.cpp  Image.h  ImageManager.cpp  ImageManager.h
src/VulkanRenderer/Image/Utils/: Bitmap.cpp  CubemapUtils.cpp  CubemapUtils.h  MipmapUtils.cpp  MipmapUtils.h  SphericalHarmonicsUtils.h
src/VulkanRenderer/Images/: Image.cpp  Image.h  ImageManager.cpp  ImageManager.h
src/VulkanRenderer/Math/: MathUtils.cpp  MathUtils.h
src/VulkanRenderer/MeshLoader/: Vertex.cpp  Vertex.h
src/VulkanRenderer/Model/: Attributes.cpp  Attributes.h  Mesh.h  Model.cpp  Model.h  ModelInfo.h  ModelManager.cpp  ModelManager.h  Vertex.cpp  Vertex.h
src/VulkanRenderer/Model/Types/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  NormalPBR.cpp  NormalPBR.h  Skybox.cpp  Skybox.h
src/VulkanRenderer/Pipeline/: Compute.cpp  Compute.h  Graphics.cpp  Graphics.h  Pipeline.cpp  Pipeline.h  PipelineManager.cpp  PipelineManager.h
src/VulkanRenderer/Queue/: QueueFamilyHandles.cpp  QueueFamilyHandles.h  QueueFamilyIndices.cpp  QueueFamilyIndices.h  QueueFamilyUtils.cpp  QueueFamilyUtils.h
src/VulkanRenderer/QueueFamily/: QueueFamilyHandles.cpp  QueueFamilyHandles.h  QueueFamilyIndices.cpp  QueueFamilyIndices.h  QueueFamilyUtils.cpp  QueueFamilyUtils.h
src/VulkanRenderer/RenderPass/: AttachmentUtils.cpp  AttachmentUtils.h  RenderPass.cpp  RenderPass.h  RenderPassManager.cpp  RenderPassManager.h  SubPassUtils.cpp  SubPassUtils.h
src/VulkanRenderer/Scene/: DeferredRenderPass.cpp  DeferredRenderPass.h  ForwardPBR.cpp  ForwardPBR.h  Scene.cpp  Scene.h  ScenePassBase.cpp  ScenePassBase.h  Spherical_Harmonic_Lighting.cpp  Spherical_Harmonic_Lighting.h
src/VulkanRenderer/Settings/: ComputePipelineConfig.h  GraphicsPipelineConfig.h  config.h  vkLayersConfig.h
src/VulkanRenderer/Shader/: ShaderManager.cpp  ShaderManager.h
src/VulkanRenderer/ShaderManager/: ShaderManager.cpp  ShaderManager.h
src/VulkanRenderer/SwapChain/: SwapChainManager.cpp  SwapChainManager.h  Swapchain.cpp  Swapchain.h
src/VulkanRenderer/Texture/: Bitmap.cpp  CubemapUtils.cpp  CubemapUtils.h  MipmapUtils.cpp  MipmapUtils.h  Texture.cpp  Texture.h
src/VulkanRenderer/Texture/Type/: Cubemap.cpp  Cubemap.h  (+2 more)
src/VulkanRenderer/Textures/: Bitmap.cpp  Bitmap.h  CubemapUtils.cpp  CubemapUtils.h  MipmapUtils.cpp  MipmapUtils.h  Texture.cpp  Texture.h
src/VulkanRenderer/ValidationLayersManager/: vlManager.cpp
src/VulkanRenderer/VkInstance/: ExtensionsUtils.cpp  VKinstance.cpp  VKinstance.h
src/VulkanRenderer/Window/: Window.cpp  Window.h  WindowManager.cpp  WindowManager.h
(+14 files in other folders)
